fix datepicker z-index & add percent col in sunburst charts

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,7 +4,7 @@
   position:fixed;
   top:18px;
   right:40px;
-  z-index: 1100;
+  z-index: 9;
   padding:0 5px;
 }
 
@@ -27,14 +27,14 @@
   position:fixed;
   top:0;
   width:100%;
-  z-index: 1000;
+  z-index: 8;
 }
 
 .sideBar{
   position:fixed;
   height:100%;
   left:0;
-  z-index: 900;
+  z-index: 7;
 }
 
 .body{
